Added two additional recipe pages
Added recipe pages for "Ratatouille" and "Mango Kale Smoothie," as well as links to these two pages on the index page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/vegan-bolognese.html">Vegan Bolognese</a>
+    
+    <ul>
+        <li>
+            <a href="recipes/vegan-bolognese.html">Vegan Bolognese</a>
+        </li>
+        <li>
+            <a href="recipes/ratatouille.html">Ratatouille</a>
+        </li>
+        <li>
+            <a href="recipes/mango-kale-smoothie.html">Mango Kale Smoothie</a>
+        </li>
+    </ul>
 </body>
 
 </html>
