Fleshed out the recipe pages
Fleshed out the recipe pages with ingredients and instructions. Added images to all of the pages.

--- a/recipes/mango-kale-smoothie.html
+++ b/recipes/mango-kale-smoothie.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Mango Kale Smoothie</title>
 </head>
 <body>
     <h1>Mango Kale Smoothie</h1>
+        <p>I make this smoothie almost every morning before work. It's such a simple way to pack in so many of the nutrients your body needs
+            without much thought or preparation—and it takes fantastic. </p>
+    <img src="../images/mango-kale-smoothie.jpg" width="400px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
+    <h3>Ingredients</h3>
+        <ul>
+            <li>2 leaves of kale, de-stemmed</li>
+            <li>1 scoop of peanut butter, or any nut butter of your choosing</li>
+            <li>1 frozen banana, peeled</li>
+            <li>1 cup of almond, oat, or soy milk</li>
+            <li>1/4 cup of sunflower seeds</li>
+            <li>1 tbsp of flaxseed meal</li>
+            <li>1 cup of frozen mangoes, cubed</li>
+            <li>1/2 tsp of turmeric</li>
+        </ul>
+    <h3>Instructions</h3>
+        <ol>
+            <li>Combine all the ingredients in a blender, and blend!</li>
+            <li><em>Enjoy.</em></li>
+        </ol>
+    
 </body>
 </html>
