--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Ratatouille</title>
 </head>
 <body>
     <h1>Ratatouille</h1>
+        <p>My mom has been making some version of this recipe since before I can remember. To this day it reminds me of those first weeks of 
+            autumn where the leaves finally start to turn and the air feels crisp. 
+        </p>
+    <img src="../images/ratatouille.jpg" width="400px" alt="Ratatouille in a white serving dish on a wood table.">
+    <h3>Ingredients</h3>
+        <ul>
+            <li>1 large globe eggplant, peeled, coarsely chopped</li>
+            <li>1 large zucchini, sliced into ¼-inch-thick rounds</li>
+            <li>2 tsp. kosher salt, plus more</li>
+            <li>¾ cup olive oil, divided</li>
+            <li>5 sprigs thyme</li>
+            <li>1 large onion, halved, sliced ½ inch thick</li>
+            <li>1 red bell pepper, ribs and seeds removed, coarsely chopped</li>
+            <li>2 garlic cloves, thinly sliced</li>
+            <li>2 pints cherry tomatoes, divided</li>
+            <li>Freshly ground black pepper</li>
+            <li>1 cup torn basil leaves</li>
+        </ul>
+    <h3>Instructions</h3>
+        <ol>
+            <li>Preheat oven to 400°. Toss 1 large globe eggplant, peeled, coarsely chopped, 1 large zucchini, sliced into ¼-inch-thick 
+                rounds, and 2 tsp. kosher salt in a colander. Let sit 30 minutes, then pat dry with paper towels.</li>
+            <li>Heat ¼ cup olive oil in a large Dutch oven or other heavy ovenproof pot over medium-high. Add half of eggplant and 
+                zucchini and cook, stirring constantly, until vegetables begin to take on color, about 5 minutes. Transfer to a medium 
+                bowl. Repeat with ¼ cup olive oil and remaining eggplant and zucchini.</li>
+            <li>Tie 5 sprigs thyme together with kitchen twine. Heat remaining ¼ cup olive oil in same pot and cook 1 large onion, 
+                halved, sliced ½ inch thick, 1 red bell pepper, ribs and seeds removed, coarsely chopped, 2 garlic cloves, thinly 
+                sliced, and thyme bundle, stirring occasionally, until onion is beginning to brown and is softened, 8-10 minutes. 
+                Add 1 pint cherry tomatoes, stirring occasionally, until just beginning to soften, about 5 minutes. Stir in reserved 
+                zucchini and eggplant, then top with remaining 1 pint tomatoes (do not stir); season with salt and freshly ground 
+                black pepper. Transfer pot to oven and roast until all vegetables are softened and tomatoes have begun to burst, 
+                15-20 minutes.</li>
+            <li><em>Remove thyme bundle. Transfer to a serving platter and top with 1 cup torn basil leaves.</em></li>
+
+        </ol>
 </body>
 </html>
