--- a/recipes/vegan-bolognese.html
+++ b/recipes/vegan-bolognese.html
@@ -6,5 +6,40 @@
 </head>
 <body>
     <h1>Vegan Bolognese</h1>
+    <p>This is a simple vegan version of a classic bolognese recipe. I'm a life-long fan of Italian food, but I've been choosing to eat 
+    less meat as of late, so this is a fantastic alternative. </p>
+    <img src="../images/vegan-bolognese.jpg" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
+    <h3>Ingredients</h3>
+        <ul>
+            <li>Olive oil</li>
+            <li>Mushrooms</li>
+            <li>Onion</li>
+            <li>Carrots</li>
+            <li>Garlic</li>
+            <li>Tomato Paste</li>
+            <li>Tamari</li>
+            <li>Red Wine</li>
+            <li>Crushed tomatoes</li>
+            <li>Vegetable broth</li>
+            <li>Nutritional yeast</li>
+            <li>Italian seasoning, bay leaf, salt and pepper</li>
+        </ul>
+    <h3>Instructions</h3>    
+        <ol>
+            <li>Heat a Large Pan (with high sides) over medium-high heat. Once heated, add the oil and wait until it's shimmering. Add 
+                mushrooms and sauté until they have released their moisture, reduced in size and are slightly browned. The pan should be 
+                mostly dry.</li>
+            <li>Now, reduce heat to medium and add onions, carrots, and garlic. Sauté for a few minutes until cooked down.</li>
+            <li>Make a small open space in the pan to add the tomato paste and make sure it's touching the surface. Cook for 30 seconds 
+                before combining. Add tamari and Italian seasoning and cook until the herbs are fragrant about 30-60 seconds.</li>
+            <li>Turn up the heat to medium-high and pour in the red wine. Cook for 2-3 minutes until it's almost completely reduced.
+                Turn the heat back to medium.</li>
+            <li>Add the tomatoes, broth, walnuts, nutritional yeast, and bay leaf. Combine and bring to a simmer then reduce to a 
+                low simmer.</li>
+            <li>Cook until sauce thickens and flavor deepens for about 10-15 minutes (longer for deeper flavor). Add salt and pepper 
+                to taste. Remove from heat and let the sauce sit a few minutes to thicken.</li>
+            <li><em>Combine with your favorite pasta and serve.</em></li>
+        </ol>
+    </ul>
 </body>
 </html>
