--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    
+    <img src="images/vegan-bolognese.jpg" height="150px" alt="Vegan bolognese in a white bowl on a wooden table.">
+    <img src="images/ratatouille.jpg" height="150px" alt="Ratatouille in a white serving dish on a wood table.">
+    <img src="images/mango-kale-smoothie.jpg" height="150px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
+    <p>Below are a few of my recent favorite recipes. I'm a vegetarian, and I try to avoid dairy as much as possible as well, 
+        so these recipes are great.</p>
     <ul>
         <li>
             <a href="recipes/vegan-bolognese.html">Vegan Bolognese</a>
