--- a/recipes/mango-kale-smoothie.html
+++ b/recipes/mango-kale-smoothie.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Mango Kale Smoothie</h1>
+        <a href="../index.html"><em>back to home</em></a>
         <p>I make this smoothie almost every morning before work. It's such a simple way to pack in so many of the nutrients your body needs
             without much thought or preparation—and it takes fantastic. </p>
     <img src="../images/mango-kale-smoothie.jpg" width="400px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
