--- a/recipes/vegan-bolognese.html
+++ b/recipes/vegan-bolognese.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>Vegan Bolognese</h1>
-    <p>This is a simple vegan version of a classic bolognese recipe. I'm a life-long fan of Italian food, but I've been choosing to eat 
-    less meat as of late, so this is a fantastic alternative. </p>
+        <a href="../index.html"><em>back to home</em></a>  
+        <p>This is a simple vegan version of a classic bolognese recipe. I'm a life-long fan of Italian food, but I've been choosing to eat 
+            less meat as of late, so this is a fantastic alternative. </p>
     <img src="../images/vegan-bolognese.jpg" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
     <h3>Ingredients</h3>
         <ul>
