--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Ratatouille</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Ratatouille</h1>
-        <a href="../index.html"><em>back to home</em></a>
+        <a class="back" href="../index.html"><em class="back">back to home</em></a>
         <p>My mom has been making some version of this recipe since before I can remember. To this day it reminds me of those first weeks of 
             autumn where the leaves finally start to turn and the air feels crisp. </p>
     <img src="../images/ratatouille.jpg" width="400px" alt="Ratatouille in a white serving dish on a wood table.">
