--- a/recipes/vegan-bolognese.html
+++ b/recipes/vegan-bolognese.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Vegan Bolognese</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Vegan Bolognese</h1>
-        <a href="../index.html"><em>back to home</em></a>  
+        <a class="back" href="../index.html"><em class="back">back to home</em></a>  
         <p>This is a simple vegan version of a classic bolognese recipe. I'm a life-long fan of Italian food, but I've been choosing to eat 
             less meat as of late, so this is a fantastic alternative. </p>
     <img src="../images/vegan-bolognese.jpg" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
