--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -11,15 +12,17 @@
     <img src="images/vegan-bolognese.jpg" height="150px" alt="Vegan bolognese in a white bowl on a wooden table.">
     <img src="images/ratatouille.jpg" height="150px" alt="Ratatouille in a white serving dish on a wood table.">
     <img src="images/mango-kale-smoothie.jpg" height="150px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
-    <p>Below are a few of my recent favorite recipes. I'm a vegetarian, and I try to avoid dairy as much as possible as well, 
+    <p>Below are a few of my recent favorite recipes. I'm a <em id="veg">vegetarian</em>, and I try to avoid dairy as much as possible as well, 
         so these recipes are great.</p>
-    <ul>
+    <ul class="links">
         <li>
             <a href="recipes/vegan-bolognese.html">Vegan Bolognese</a>
         </li>
-        <li>
-            <a href="recipes/ratatouille.html">Ratatouille</a>
+            <br>
+        <li class="rat"> 
+            <a class="rat" href="recipes/ratatouille.html">Ratatouille</a>
         </li>
+            <br>
         <li>
             <a href="recipes/mango-kale-smoothie.html">Mango Kale Smoothie</a>
         </li>
