Margins/Padding/Block/Inline
Adding what I learned about the box method, normal flow, and block vs. inline elements to improve the site.

--- a/index.html
+++ b/index.html
@@ -8,25 +8,19 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="images/vegan-bolognese.jpg" height="150px" alt="Vegan bolognese in a white bowl on a wooden table.">
-    <img src="images/ratatouille.jpg" height="150px" alt="Ratatouille in a white serving dish on a wood table.">
-    <img src="images/mango-kale-smoothie.jpg" height="150px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
-    <p>Below are a few of my recent favorite recipes. I'm a <em id="veg">vegetarian</em>, and I try to avoid dairy as much as possible as well, 
+    <h1>Recipes</h1>
+    <div class="home-images">
+        <img src="images/vegan-bolognese.jpg" alt="Vegan bolognese in a white bowl on a wooden table.">
+        <img src="images/ratatouille.jpg" alt="Ratatouille in a white serving dish on a wood table.">
+        <img src="images/mango-kale-smoothie.jpg" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
+    </div>
+    <p>Below are a few of my recent favorite recipes. I'm a vegetarian, and I try to avoid dairy as much as possible as well, 
         so these recipes are great.</p>
-    <ul class="links">
-        <li>
-            <a href="recipes/vegan-bolognese.html">Vegan Bolognese</a>
-        </li>
-            <br>
-        <li class="rat"> 
-            <a class="rat" href="recipes/ratatouille.html">Ratatouille</a>
-        </li>
-            <br>
-        <li>
-            <a href="recipes/mango-kale-smoothie.html">Mango Kale Smoothie</a>
-        </li>
-    </ul>
+    <div class="home-links">
+            <a href="recipes/vegan-bolognese.html"><button>Vegan Bolognese</button></a>
+            <a href="recipes/ratatouille.html"><button>Ratatouille</button></a>
+            <a href="recipes/mango-kale-smoothie.html"><button>Mango Kale Smoothie</button></a>
+    </div>
 </body>
 
-</html>
+</html> 
