--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Ratatouille</h1>
-        <a class="back" href="../index.html"><em class="back">back to home</em></a>
+    <h1><a href="../index.html">Recipes</a></h1>
+    <h2>Ratatouille</h2>
         <p>My mom has been making some version of this recipe since before I can remember. To this day it reminds me of those first weeks of 
             autumn where the leaves finally start to turn and the air feels crisp. </p>
-    <img src="../images/ratatouille.jpg" width="400px" alt="Ratatouille in a white serving dish on a wood table.">
+    <img src="../images/ratatouille.jpg" class="recipe" width="400px" alt="Ratatouille in a white serving dish on a wood table.">
     <h3>Ingredients</h3>
         <ul>
             <li>1 large globe eggplant, peeled, coarsely chopped</li>
