--- a/recipes/mango-kale-smoothie.html
+++ b/recipes/mango-kale-smoothie.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Mango Kale Smoothie</h1>
-        <a class="back" href="../index.html"><em class="back">back to home</em></a>
+    <h1><a href="../index.html">Recipes</a></h1>
+    <h2>Mango Kale Smoothie</h2>
         <p>I make this smoothie almost every morning before work. It's such a simple way to pack in so many of the nutrients your body needs
             without much thought or preparation—and it takes fantastic. </p>
-    <img src="../images/mango-kale-smoothie.jpg" width="400px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
+    <img src="../images/mango-kale-smoothie.jpg" class="recipe" width="400px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
     <h3>Ingredients</h3>
         <ul>
             <li>2 leaves of kale, de-stemmed</li>
