--- a/recipes/vegan-bolognese.html
+++ b/recipes/vegan-bolognese.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Vegan Bolognese</h1>
-        <a class="back" href="../index.html"><em class="back">back to home</em></a>  
+    <h1><a href="../index.html">Recipes</a></h1>
+    <h2>Vegan Bolognese</h2>
         <p>This is a simple vegan version of a classic bolognese recipe. I'm a life-long fan of Italian food, but I've been choosing to eat 
             less meat as of late, so this is a fantastic alternative. </p>
-    <img src="../images/vegan-bolognese.jpg" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
+    <img src="../images/vegan-bolognese.jpg" class="recipe" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
     <h3>Ingredients</h3>
         <ul>
             <li>Olive oil</li>
