Buttons and Ingredients/Instructions Columns
Formalized the width of the homepage buttons. Put the ingredients and instructions in two columns using flexbox. Added custom font "Montserrat" to the site title.

--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <title>Ratatouille</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jnu0uas.css">
 </head>
 <body>
-    <h1><a href="../index.html">Recipes</a></h1>
+    <h1 class="title"><a href="../index.html">Recipes</a></h1>
     <h2>Ratatouille</h2>
         <p>My mom has been making some version of this recipe since before I can remember. To this day it reminds me of those first weeks of 
             autumn where the leaves finally start to turn and the air feels crisp. </p>
-    <img src="../images/ratatouille.jpg" class="recipe" width="400px" alt="Ratatouille in a white serving dish on a wood table.">
-    <h3>Ingredients</h3>
+    <img src="../images/ratatouille.jpg" class="recipe-image" width="400px" alt="Ratatouille in a white serving dish on a wood table.">
+<div class="recipe-body"> 
+    <div class="recipe-ingred">
+        <h3>Ingredients</h3>
         <ul>
             <li>1 large globe eggplant, peeled, coarsely chopped</li>
             <li>1 large zucchini, sliced into ¼-inch-thick rounds</li>
@@ -25,7 +28,9 @@
             <li>Freshly ground black pepper</li>
             <li>1 cup torn basil leaves</li>
         </ul>
-    <h3>Instructions</h3>
+    </div>    
+    <div class="recipe-instruct">   
+        <h3>Instructions</h3>
         <ol>
             <li>Preheat oven to 400°. Toss 1 large globe eggplant, peeled, coarsely chopped, 1 large zucchini, sliced into ¼-inch-thick 
                 rounds, and 2 tsp. kosher salt in a colander. Let sit 30 minutes, then pat dry with paper towels.</li>
@@ -40,7 +45,7 @@
                 black pepper. Transfer pot to oven and roast until all vegetables are softened and tomatoes have begun to burst, 
                 15-20 minutes.</li>
             <li><em>Remove thyme bundle. Transfer to a serving platter and top with 1 cup torn basil leaves.</em></li>
-
         </ol>
+    </div>    
 </body>
 </html>
