--- a/recipes/vegan-bolognese.html
+++ b/recipes/vegan-bolognese.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <title>Vegan Bolognese</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jnu0uas.css">
 </head>
 <body>
-    <h1><a href="../index.html">Recipes</a></h1>
+    <h1 class="title"><a href="../index.html">Recipes</a></h1>
     <h2>Vegan Bolognese</h2>
         <p>This is a simple vegan version of a classic bolognese recipe. I'm a life-long fan of Italian food, but I've been choosing to eat 
             less meat as of late, so this is a fantastic alternative. </p>
-    <img src="../images/vegan-bolognese.jpg" class="recipe" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
-    <h3>Ingredients</h3>
+    <img src="../images/vegan-bolognese.jpg" class="recipe-image" width="400px" alt="Vegan bolognese in a white bowl on a wooden table.">
+<div class="recipe-body"> 
+    <div class="recipe-ingred">
+        <h3>Ingredients</h3>
         <ul>
             <li>Olive oil</li>
             <li>Mushrooms</li>
@@ -26,7 +29,9 @@
             <li>Nutritional yeast</li>
             <li>Italian seasoning, bay leaf, salt and pepper</li>
         </ul>
-    <h3>Instructions</h3>    
+    </div>
+    <div class="recipe-instruct">   
+        <h3>Instructions</h3>    
         <ol>
             <li>Heat a Large Pan (with high sides) over medium-high heat. Once heated, add the oil and wait until it's shimmering. Add 
                 mushrooms and sauté until they have released their moisture, reduced in size and are slightly browned. The pan should be 
@@ -43,5 +48,7 @@
             <li><em>Combine with your favorite pasta and serve.</em></li>
         </ol>
     </ul>
+    </div>
+</div>    
 </body>
 </html>
