--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="utf-8">
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jnu0uas.css">
 </head>
 
 <body>
-    <h1>Recipes</h1>
+    <h1 class="title">Recipes</h1>
+    
+    <p>Below are a few of my recent favorite recipes. I'm a vegetarian, and I try to avoid dairy as much as possible as well, 
+        so these recipes are great.</p>
+
     <div class="home-images">
         <img src="images/vegan-bolognese.jpg" alt="Vegan bolognese in a white bowl on a wooden table.">
         <img src="images/ratatouille.jpg" alt="Ratatouille in a white serving dish on a wood table.">
         <img src="images/mango-kale-smoothie.jpg" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
     </div>
-    <p>Below are a few of my recent favorite recipes. I'm a vegetarian, and I try to avoid dairy as much as possible as well, 
-        so these recipes are great.</p>
+
     <div class="home-links">
             <a href="recipes/vegan-bolognese.html"><button>Vegan Bolognese</button></a>
             <a href="recipes/ratatouille.html"><button>Ratatouille</button></a>
