--- a/recipes/mango-kale-smoothie.html
+++ b/recipes/mango-kale-smoothie.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <title>Mango Kale Smoothie</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jnu0uas.css">
 </head>
 <body>
-    <h1><a href="../index.html">Recipes</a></h1>
+    <h1 class="title"><a href="../index.html">Recipes</a></h1>
     <h2>Mango Kale Smoothie</h2>
         <p>I make this smoothie almost every morning before work. It's such a simple way to pack in so many of the nutrients your body needs
             without much thought or preparation—and it takes fantastic. </p>
-    <img src="../images/mango-kale-smoothie.jpg" class="recipe" width="400px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
-    <h3>Ingredients</h3>
+    <img src="../images/mango-kale-smoothie.jpg" class="recipe-image" width="400px" alt="Mango kale smoothies on a cutting board surrounded by raw ingredients.">
+<div class="recipe-body"> 
+    <div class="recipe-ingred">    
+        <h3>Ingredients</h3>
         <ul>
             <li>2 leaves of kale, de-stemmed</li>
             <li>1 scoop of peanut butter, or any nut butter of your choosing</li>
@@ -22,10 +25,13 @@
             <li>1 cup of frozen mangoes, cubed</li>
             <li>1/2 tsp of turmeric</li>
         </ul>
-    <h3>Instructions</h3>
+    </div>    
+    <div class="recipe-instruct">   
+        <h3>Instructions</h3>
         <ol>
             <li>Combine all the ingredients in a blender, and blend!</li>
             <li><em>Enjoy.</em></li>
         </ol>
+    </div>    
 </body>
 </html>
